[MUSINSA-21] [api] GET 브랜드 상관없이 모든 상품을 최소가로 찾기 ㄴ mapstruct 리팩토링 ㄴ 쿼리에서 정렬해서 가져올 수 있도록 네이티브쿼리 사용 - 성능 위해 인덱스 추가